MiniC/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On Include shift to state 1
-- On programa shift to state 2
-- On includes shift to state 3
-- On TInt reduce production includes -> 
-- On TFloat reduce production includes -> 
-- On TChar reduce production includes -> 
-- On TBool reduce production includes -> 
-- On EOF reduce production includes -> 

State 1:
includes -> Include . [ TInt TFloat TChar TBool EOF ]
-- On TInt reduce production includes -> Include 
-- On TFloat reduce production includes -> Include 
-- On TChar reduce production includes -> Include 
-- On TBool reduce production includes -> Include 
-- On EOF reduce production includes -> Include 

State 2:
programa' -> programa . [ # ]
-- On # accept programa

State 3:
programa -> includes . funcoes EOF [ # ]
-- On TInt shift to state 4
-- On TFloat shift to state 8
-- On TChar shift to state 9
-- On TBool shift to state 10
-- On tipo shift to state 166
-- On funcoes shift to state 177
-- On funcao shift to state 179
-- On EOF reduce production funcoes -> 

State 4:
funcao -> TInt . Main AParen argumentos FParen AChave comandos FChave [ TInt TFloat TChar TBool EOF ]
tipo -> TInt . [ Ident ]
-- On Main shift to state 5
-- On Ident reduce production tipo -> TInt 

State 5:
funcao -> TInt Main . AParen argumentos FParen AChave comandos FChave [ TInt TFloat TChar TBool EOF ]
-- On AParen shift to state 6

State 6:
funcao -> TInt Main AParen . argumentos FParen AChave comandos FChave [ TInt TFloat TChar TBool EOF ]
-- On TInt shift to state 7
-- On TFloat shift to state 8
-- On TChar shift to state 9
-- On TBool shift to state 10
-- On tipo shift to state 11
-- On seq shift to state 13
-- On argumentos shift to state 16
-- On argumento shift to state 165
-- On FParen reduce production argumentos -> 

State 7:
tipo -> TInt . [ Ident ]
-- On Ident reduce production tipo -> TInt 

State 8:
tipo -> TFloat . [ Ident ]
-- On Ident reduce production tipo -> TFloat 

State 9:
tipo -> TChar . [ Ident ]
-- On Ident reduce production tipo -> TChar 

State 10:
tipo -> TBool . [ Ident ]
-- On Ident reduce production tipo -> TBool 

State 11:
argumento -> tipo . Ident [ Virg FParen ]
-- On Ident shift to state 12

State 12:
argumento -> tipo Ident . [ Virg FParen ]
-- On Virg reduce production argumento -> tipo Ident 
-- On FParen reduce production argumento -> tipo Ident 

State 13:
argumentos -> seq . [ FParen ]
seq -> seq . Virg argumento [ Virg FParen ]
-- On Virg shift to state 14
-- On FParen reduce production argumentos -> seq 

State 14:
seq -> seq Virg . argumento [ Virg FParen ]
-- On TInt shift to state 7
-- On TFloat shift to state 8
-- On TChar shift to state 9
-- On TBool shift to state 10
-- On tipo shift to state 11
-- On argumento shift to state 15

State 15:
seq -> seq Virg argumento . [ Virg FParen ]
-- On Virg reduce production seq -> seq Virg argumento 
-- On FParen reduce production seq -> seq Virg argumento 

State 16:
funcao -> TInt Main AParen argumentos . FParen AChave comandos FChave [ TInt TFloat TChar TBool EOF ]
-- On FParen shift to state 17

State 17:
funcao -> TInt Main AParen argumentos FParen . AChave comandos FChave [ TInt TFloat TChar TBool EOF ]
-- On AChave shift to state 18

State 18:
funcao -> TInt Main AParen argumentos FParen AChave . comandos FChave [ TInt TFloat TChar TBool EOF ]
-- On While shift to state 19
-- On TInt shift to state 7
-- On TFloat shift to state 8
-- On TChar shift to state 9
-- On TBool shift to state 10
-- On Switch shift to state 73
-- On Scanf shift to state 83
-- On Printf shift to state 90
-- On If shift to state 94
-- On Ident shift to state 99
-- On GetChar shift to state 103
-- On For shift to state 104
-- On tipo shift to state 111
-- On comandos shift to state 163
-- On comando shift to state 121
-- On cmd_while shift to state 124
-- On cmd_switch shift to state 125
-- On cmd_scanf shift to state 126
-- On cmd_printf shift to state 127
-- On cmd_incr shift to state 128
-- On cmd_if shift to state 129
-- On cmd_getc shift to state 130
-- On cmd_for shift to state 131
-- On cmd_dec shift to state 132
-- On cmd_atrib shift to state 133
-- On FChave reduce production comandos -> 

State 19:
cmd_while -> While . AParen expressao FParen AChave comandos FChave [ While TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg If Ident GetChar For FParen FChave Break ]
-- On AParen shift to state 20

State 20:
cmd_while -> While AParen . expressao FParen AChave comandos FChave [ While TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg If Ident GetChar For FParen FChave Break ]
-- On STRING shift to state 21
-- On Not shift to state 22
-- On Ident shift to state 23
-- On INT shift to state 25
-- On FLOAT shift to state 26
-- On CHAR shift to state 27
-- On BOOL shift to state 28
-- On AParen shift to state 29
-- On expressao shift to state 70
-- On expr60 shift to state 32
-- On expr50 shift to state 33
-- On expr40 shift to state 34
-- On expr30 shift to state 40
-- On expr20 shift to state 45
-- On expr10 shift to state 62
-- On chama_func shift to state 37

State 21:
expr60 -> STRING . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On While reduce production expr60 -> STRING 
-- On Virg reduce production expr60 -> STRING 
-- On TInt reduce production expr60 -> STRING 
-- On TFloat reduce production expr60 -> STRING 
-- On TChar reduce production expr60 -> STRING 
-- On TBool reduce production expr60 -> STRING 
-- On Switch reduce production expr60 -> STRING 
-- On Scanf reduce production expr60 -> STRING 
-- On Return reduce production expr60 -> STRING 
-- On Printf reduce production expr60 -> STRING 
-- On PTVirg reduce production expr60 -> STRING 
-- On Or reduce production expr60 -> STRING 
-- On OpSub reduce production expr60 -> STRING 
-- On OpSoma reduce production expr60 -> STRING 
-- On OpMul reduce production expr60 -> STRING 
-- On OpDiv reduce production expr60 -> STRING 
-- On MenorI reduce production expr60 -> STRING 
-- On Menor reduce production expr60 -> STRING 
-- On MaiorI reduce production expr60 -> STRING 
-- On Maior reduce production expr60 -> STRING 
-- On If reduce production expr60 -> STRING 
-- On Ident reduce production expr60 -> STRING 
-- On GetChar reduce production expr60 -> STRING 
-- On For reduce production expr60 -> STRING 
-- On FParen reduce production expr60 -> STRING 
-- On FChave reduce production expr60 -> STRING 
-- On DoisP reduce production expr60 -> STRING 
-- On Dif reduce production expr60 -> STRING 
-- On Comp reduce production expr60 -> STRING 
-- On Break reduce production expr60 -> STRING 
-- On Apost reduce production expr60 -> STRING 
-- On And reduce production expr60 -> STRING 

State 22:
expr50 -> Not . expr50 [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On STRING shift to state 21
-- On Not shift to state 22
-- On Ident shift to state 23
-- On INT shift to state 25
-- On FLOAT shift to state 26
-- On CHAR shift to state 27
-- On BOOL shift to state 28
-- On AParen shift to state 29
-- On expr60 shift to state 32
-- On expr50 shift to state 69
-- On chama_func shift to state 37

State 23:
chama_func -> Ident . AParen args FParen [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
expr60 -> Ident . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On AParen shift to state 24
-- On While reduce production expr60 -> Ident 
-- On Virg reduce production expr60 -> Ident 
-- On TInt reduce production expr60 -> Ident 
-- On TFloat reduce production expr60 -> Ident 
-- On TChar reduce production expr60 -> Ident 
-- On TBool reduce production expr60 -> Ident 
-- On Switch reduce production expr60 -> Ident 
-- On Scanf reduce production expr60 -> Ident 
-- On Return reduce production expr60 -> Ident 
-- On Printf reduce production expr60 -> Ident 
-- On PTVirg reduce production expr60 -> Ident 
-- On Or reduce production expr60 -> Ident 
-- On OpSub reduce production expr60 -> Ident 
-- On OpSoma reduce production expr60 -> Ident 
-- On OpMul reduce production expr60 -> Ident 
-- On OpDiv reduce production expr60 -> Ident 
-- On MenorI reduce production expr60 -> Ident 
-- On Menor reduce production expr60 -> Ident 
-- On MaiorI reduce production expr60 -> Ident 
-- On Maior reduce production expr60 -> Ident 
-- On If reduce production expr60 -> Ident 
-- On Ident reduce production expr60 -> Ident 
-- On GetChar reduce production expr60 -> Ident 
-- On For reduce production expr60 -> Ident 
-- On FParen reduce production expr60 -> Ident 
-- On FChave reduce production expr60 -> Ident 
-- On DoisP reduce production expr60 -> Ident 
-- On Dif reduce production expr60 -> Ident 
-- On Comp reduce production expr60 -> Ident 
-- On Break reduce production expr60 -> Ident 
-- On Apost reduce production expr60 -> Ident 
-- On And reduce production expr60 -> Ident 

State 24:
chama_func -> Ident AParen . args FParen [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On STRING shift to state 21
-- On Not shift to state 22
-- On Ident shift to state 23
-- On INT shift to state 25
-- On FLOAT shift to state 26
-- On CHAR shift to state 27
-- On BOOL shift to state 28
-- On AParen shift to state 29
-- On seqs shift to state 63
-- On expressao shift to state 66
-- On expr60 shift to state 32
-- On expr50 shift to state 33
-- On expr40 shift to state 34
-- On expr30 shift to state 40
-- On expr20 shift to state 45
-- On expr10 shift to state 62
-- On chama_func shift to state 37
-- On args shift to state 67
-- On FParen reduce production args -> 

State 25:
expr60 -> INT . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On While reduce production expr60 -> INT 
-- On Virg reduce production expr60 -> INT 
-- On TInt reduce production expr60 -> INT 
-- On TFloat reduce production expr60 -> INT 
-- On TChar reduce production expr60 -> INT 
-- On TBool reduce production expr60 -> INT 
-- On Switch reduce production expr60 -> INT 
-- On Scanf reduce production expr60 -> INT 
-- On Return reduce production expr60 -> INT 
-- On Printf reduce production expr60 -> INT 
-- On PTVirg reduce production expr60 -> INT 
-- On Or reduce production expr60 -> INT 
-- On OpSub reduce production expr60 -> INT 
-- On OpSoma reduce production expr60 -> INT 
-- On OpMul reduce production expr60 -> INT 
-- On OpDiv reduce production expr60 -> INT 
-- On MenorI reduce production expr60 -> INT 
-- On Menor reduce production expr60 -> INT 
-- On MaiorI reduce production expr60 -> INT 
-- On Maior reduce production expr60 -> INT 
-- On If reduce production expr60 -> INT 
-- On Ident reduce production expr60 -> INT 
-- On GetChar reduce production expr60 -> INT 
-- On For reduce production expr60 -> INT 
-- On FParen reduce production expr60 -> INT 
-- On FChave reduce production expr60 -> INT 
-- On DoisP reduce production expr60 -> INT 
-- On Dif reduce production expr60 -> INT 
-- On Comp reduce production expr60 -> INT 
-- On Break reduce production expr60 -> INT 
-- On Apost reduce production expr60 -> INT 
-- On And reduce production expr60 -> INT 

State 26:
expr60 -> FLOAT . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On While reduce production expr60 -> FLOAT 
-- On Virg reduce production expr60 -> FLOAT 
-- On TInt reduce production expr60 -> FLOAT 
-- On TFloat reduce production expr60 -> FLOAT 
-- On TChar reduce production expr60 -> FLOAT 
-- On TBool reduce production expr60 -> FLOAT 
-- On Switch reduce production expr60 -> FLOAT 
-- On Scanf reduce production expr60 -> FLOAT 
-- On Return reduce production expr60 -> FLOAT 
-- On Printf reduce production expr60 -> FLOAT 
-- On PTVirg reduce production expr60 -> FLOAT 
-- On Or reduce production expr60 -> FLOAT 
-- On OpSub reduce production expr60 -> FLOAT 
-- On OpSoma reduce production expr60 -> FLOAT 
-- On OpMul reduce production expr60 -> FLOAT 
-- On OpDiv reduce production expr60 -> FLOAT 
-- On MenorI reduce production expr60 -> FLOAT 
-- On Menor reduce production expr60 -> FLOAT 
-- On MaiorI reduce production expr60 -> FLOAT 
-- On Maior reduce production expr60 -> FLOAT 
-- On If reduce production expr60 -> FLOAT 
-- On Ident reduce production expr60 -> FLOAT 
-- On GetChar reduce production expr60 -> FLOAT 
-- On For reduce production expr60 -> FLOAT 
-- On FParen reduce production expr60 -> FLOAT 
-- On FChave reduce production expr60 -> FLOAT 
-- On DoisP reduce production expr60 -> FLOAT 
-- On Dif reduce production expr60 -> FLOAT 
-- On Comp reduce production expr60 -> FLOAT 
-- On Break reduce production expr60 -> FLOAT 
-- On Apost reduce production expr60 -> FLOAT 
-- On And reduce production expr60 -> FLOAT 

State 27:
expr60 -> CHAR . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On While reduce production expr60 -> CHAR 
-- On Virg reduce production expr60 -> CHAR 
-- On TInt reduce production expr60 -> CHAR 
-- On TFloat reduce production expr60 -> CHAR 
-- On TChar reduce production expr60 -> CHAR 
-- On TBool reduce production expr60 -> CHAR 
-- On Switch reduce production expr60 -> CHAR 
-- On Scanf reduce production expr60 -> CHAR 
-- On Return reduce production expr60 -> CHAR 
-- On Printf reduce production expr60 -> CHAR 
-- On PTVirg reduce production expr60 -> CHAR 
-- On Or reduce production expr60 -> CHAR 
-- On OpSub reduce production expr60 -> CHAR 
-- On OpSoma reduce production expr60 -> CHAR 
-- On OpMul reduce production expr60 -> CHAR 
-- On OpDiv reduce production expr60 -> CHAR 
-- On MenorI reduce production expr60 -> CHAR 
-- On Menor reduce production expr60 -> CHAR 
-- On MaiorI reduce production expr60 -> CHAR 
-- On Maior reduce production expr60 -> CHAR 
-- On If reduce production expr60 -> CHAR 
-- On Ident reduce production expr60 -> CHAR 
-- On GetChar reduce production expr60 -> CHAR 
-- On For reduce production expr60 -> CHAR 
-- On FParen reduce production expr60 -> CHAR 
-- On FChave reduce production expr60 -> CHAR 
-- On DoisP reduce production expr60 -> CHAR 
-- On Dif reduce production expr60 -> CHAR 
-- On Comp reduce production expr60 -> CHAR 
-- On Break reduce production expr60 -> CHAR 
-- On Apost reduce production expr60 -> CHAR 
-- On And reduce production expr60 -> CHAR 

State 28:
expr60 -> BOOL . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On While reduce production expr60 -> BOOL 
-- On Virg reduce production expr60 -> BOOL 
-- On TInt reduce production expr60 -> BOOL 
-- On TFloat reduce production expr60 -> BOOL 
-- On TChar reduce production expr60 -> BOOL 
-- On TBool reduce production expr60 -> BOOL 
-- On Switch reduce production expr60 -> BOOL 
-- On Scanf reduce production expr60 -> BOOL 
-- On Return reduce production expr60 -> BOOL 
-- On Printf reduce production expr60 -> BOOL 
-- On PTVirg reduce production expr60 -> BOOL 
-- On Or reduce production expr60 -> BOOL 
-- On OpSub reduce production expr60 -> BOOL 
-- On OpSoma reduce production expr60 -> BOOL 
-- On OpMul reduce production expr60 -> BOOL 
-- On OpDiv reduce production expr60 -> BOOL 
-- On MenorI reduce production expr60 -> BOOL 
-- On Menor reduce production expr60 -> BOOL 
-- On MaiorI reduce production expr60 -> BOOL 
-- On Maior reduce production expr60 -> BOOL 
-- On If reduce production expr60 -> BOOL 
-- On Ident reduce production expr60 -> BOOL 
-- On GetChar reduce production expr60 -> BOOL 
-- On For reduce production expr60 -> BOOL 
-- On FParen reduce production expr60 -> BOOL 
-- On FChave reduce production expr60 -> BOOL 
-- On DoisP reduce production expr60 -> BOOL 
-- On Dif reduce production expr60 -> BOOL 
-- On Comp reduce production expr60 -> BOOL 
-- On Break reduce production expr60 -> BOOL 
-- On Apost reduce production expr60 -> BOOL 
-- On And reduce production expr60 -> BOOL 

State 29:
expr60 -> AParen . expressao FParen [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On STRING shift to state 21
-- On Not shift to state 22
-- On Ident shift to state 23
-- On INT shift to state 25
-- On FLOAT shift to state 26
-- On CHAR shift to state 27
-- On BOOL shift to state 28
-- On AParen shift to state 29
-- On expressao shift to state 30
-- On expr60 shift to state 32
-- On expr50 shift to state 33
-- On expr40 shift to state 34
-- On expr30 shift to state 40
-- On expr20 shift to state 45
-- On expr10 shift to state 62
-- On chama_func shift to state 37

State 30:
expr60 -> AParen expressao . FParen [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
expressao -> expressao . And expr10 [ Or FParen And ]
expressao -> expressao . Or expr10 [ Or FParen And ]
-- On Or shift to state 31
-- On FParen shift to state 59
-- On And shift to state 60

State 31:
expressao -> expressao Or . expr10 [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or If Ident GetChar For FParen FChave DoisP Break Apost And ]
-- On STRING shift to state 21
-- On Not shift to state 22
-- On Ident shift to state 23
-- On INT shift to state 25
-- On FLOAT shift to state 26
-- On CHAR shift to state 27
-- On BOOL shift to state 28
-- On AParen shift to state 29
-- On expr60 shift to state 32
-- On expr50 shift to state 33
-- On expr40 shift to state 34
-- On expr30 shift to state 40
-- On expr20 shift to state 45
-- On expr10 shift to state 54
-- On chama_func shift to state 37

State 32:
expr50 -> expr60 . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On While reduce production expr50 -> expr60 
-- On Virg reduce production expr50 -> expr60 
-- On TInt reduce production expr50 -> expr60 
-- On TFloat reduce production expr50 -> expr60 
-- On TChar reduce production expr50 -> expr60 
-- On TBool reduce production expr50 -> expr60 
-- On Switch reduce production expr50 -> expr60 
-- On Scanf reduce production expr50 -> expr60 
-- On Return reduce production expr50 -> expr60 
-- On Printf reduce production expr50 -> expr60 
-- On PTVirg reduce production expr50 -> expr60 
-- On Or reduce production expr50 -> expr60 
-- On OpSub reduce production expr50 -> expr60 
-- On OpSoma reduce production expr50 -> expr60 
-- On OpMul reduce production expr50 -> expr60 
-- On OpDiv reduce production expr50 -> expr60 
-- On MenorI reduce production expr50 -> expr60 
-- On Menor reduce production expr50 -> expr60 
-- On MaiorI reduce production expr50 -> expr60 
-- On Maior reduce production expr50 -> expr60 
-- On If reduce production expr50 -> expr60 
-- On Ident reduce production expr50 -> expr60 
-- On GetChar reduce production expr50 -> expr60 
-- On For reduce production expr50 -> expr60 
-- On FParen reduce production expr50 -> expr60 
-- On FChave reduce production expr50 -> expr60 
-- On DoisP reduce production expr50 -> expr60 
-- On Dif reduce production expr50 -> expr60 
-- On Comp reduce production expr50 -> expr60 
-- On Break reduce production expr50 -> expr60 
-- On Apost reduce production expr50 -> expr60 
-- On And reduce production expr50 -> expr60 

State 33:
expr40 -> expr50 . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On While reduce production expr40 -> expr50 
-- On Virg reduce production expr40 -> expr50 
-- On TInt reduce production expr40 -> expr50 
-- On TFloat reduce production expr40 -> expr50 
-- On TChar reduce production expr40 -> expr50 
-- On TBool reduce production expr40 -> expr50 
-- On Switch reduce production expr40 -> expr50 
-- On Scanf reduce production expr40 -> expr50 
-- On Return reduce production expr40 -> expr50 
-- On Printf reduce production expr40 -> expr50 
-- On PTVirg reduce production expr40 -> expr50 
-- On Or reduce production expr40 -> expr50 
-- On OpSub reduce production expr40 -> expr50 
-- On OpSoma reduce production expr40 -> expr50 
-- On OpMul reduce production expr40 -> expr50 
-- On OpDiv reduce production expr40 -> expr50 
-- On MenorI reduce production expr40 -> expr50 
-- On Menor reduce production expr40 -> expr50 
-- On MaiorI reduce production expr40 -> expr50 
-- On Maior reduce production expr40 -> expr50 
-- On If reduce production expr40 -> expr50 
-- On Ident reduce production expr40 -> expr50 
-- On GetChar reduce production expr40 -> expr50 
-- On For reduce production expr40 -> expr50 
-- On FParen reduce production expr40 -> expr50 
-- On FChave reduce production expr40 -> expr50 
-- On DoisP reduce production expr40 -> expr50 
-- On Dif reduce production expr40 -> expr50 
-- On Comp reduce production expr40 -> expr50 
-- On Break reduce production expr40 -> expr50 
-- On Apost reduce production expr40 -> expr50 
-- On And reduce production expr40 -> expr50 

State 34:
expr30 -> expr40 . [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
expr40 -> expr40 . OpMul expr50 [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
expr40 -> expr40 . OpDiv expr50 [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On OpMul shift to state 35
-- On OpDiv shift to state 38
-- On While reduce production expr30 -> expr40 
-- On Virg reduce production expr30 -> expr40 
-- On TInt reduce production expr30 -> expr40 
-- On TFloat reduce production expr30 -> expr40 
-- On TChar reduce production expr30 -> expr40 
-- On TBool reduce production expr30 -> expr40 
-- On Switch reduce production expr30 -> expr40 
-- On Scanf reduce production expr30 -> expr40 
-- On Return reduce production expr30 -> expr40 
-- On Printf reduce production expr30 -> expr40 
-- On PTVirg reduce production expr30 -> expr40 
-- On Or reduce production expr30 -> expr40 
-- On OpSub reduce production expr30 -> expr40 
-- On OpSoma reduce production expr30 -> expr40 
-- On MenorI reduce production expr30 -> expr40 
-- On Menor reduce production expr30 -> expr40 
-- On MaiorI reduce production expr30 -> expr40 
-- On Maior reduce production expr30 -> expr40 
-- On If reduce production expr30 -> expr40 
-- On Ident reduce production expr30 -> expr40 
-- On GetChar reduce production expr30 -> expr40 
-- On For reduce production expr30 -> expr40 
-- On FParen reduce production expr30 -> expr40 
-- On FChave reduce production expr30 -> expr40 
-- On DoisP reduce production expr30 -> expr40 
-- On Dif reduce production expr30 -> expr40 
-- On Comp reduce production expr30 -> expr40 
-- On Break reduce production expr30 -> expr40 
-- On Apost reduce production expr30 -> expr40 
-- On And reduce production expr30 -> expr40 

State 35:
expr40 -> expr40 OpMul . expr50 [ While Virg TInt TFloat TChar TBool Switch Scanf Return Printf PTVirg Or OpSub OpSoma OpMul OpDiv MenorI Menor MaiorI Maior If Ident GetChar For FParen FChave DoisP Dif Comp Break Apost And ]
-- On STRING shift to state 21
-- On Not shift to state 22
-- On Ident shift to state 23
-- On INT shift to state 25
-- On FLOAT shift to state 26
-- On CHAR shift to state 27
-- On BOOL shift to state 28
-- On AParen shift to state 29
-- On expr60 shift to state 32
-- On expr50 shift to state 36
-- On chama_func shift to state 37
